--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,10 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 11
-      # Runs a single command using the runners shell
+      - name: Lint
+        uses: gradle/gradle-build-action@v1.5.1
+        with:
+          arguments: ktLintCheck --info
       - name: Build
         uses: gradle/gradle-build-action@v1.5.1
         with:
