Remove craftinginterpreters dir after copying files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,8 @@ jobs:
         run: |
           rm -rf src/test/resources/lox/book-tests
           mkdir src/test/resources/lox/book-tests
-          cp -R craftinginterpreters/test src/test/resources/lox/book-tests    
+          cp -R craftinginterpreters/test src/test/resources/lox/book-tests
+          git rm craftinginterpreters
       - uses: actions/setup-java@v1
         with:
           java-version: 11
